Created endpoint to index stats and created resource for the response
